@@ -1,17 +1,16 @@
-package sae.learnhub.learnhub.infrastructure.config;
+package sae.elearning.infrastructure.config;
 
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
@@ -19,37 +18,37 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Map<String, Object>> handleValidationErrors(MethodArgumentNotValidException ex) {
         List<String> errors = ex.getBindingResult().getFieldErrors().stream()
-                .map(fieldError -> fieldError.getDefaultMessage())
-                .collect(Collectors.toList());
+                .map(FieldError::getDefaultMessage)
+                .toList();
 
-        Map<String, Object> body = new LinkedHashMap<>();
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", "Données invalides");
-        body.put("messages", errors);
-
-        return ResponseEntity.badRequest().body(body);
+        return ResponseEntity.badRequest().body(Map.of(
+                "status", HttpStatus.BAD_REQUEST.value(),
+                "error", "Données invalides",
+                "messages", errors
+        ));
     }
 
     @ExceptionHandler(ResponseStatusException.class)
     public ResponseEntity<Map<String, Object>> handleResponseStatusException(ResponseStatusException ex) {
-        Map<String, Object> body = new LinkedHashMap<>();
-        body.put("status", ex.getStatusCode().value());
-        body.put("error", ex.getReason() != null ? ex.getReason() : ex.getMessage());
-        return ResponseEntity.status(ex.getStatusCode()).body(body);
+        return ResponseEntity.status(ex.getStatusCode()).body(Map.of(
+                "status", ex.getStatusCode().value(),
+                "error", ex.getReason() != null ? ex.getReason() : ex.getMessage()
+        ));
     }
 
     @ExceptionHandler(DataIntegrityViolationException.class)
     public ResponseEntity<Map<String, Object>> handleDataIntegrityViolation(DataIntegrityViolationException ex) {
-        Map<String, Object> body = new LinkedHashMap<>();
-        body.put("status", HttpStatus.BAD_REQUEST.value());
         String message = ex.getMostSpecificCause().getMessage();
-        if (message != null && message.contains("utilisateur_email_key")) {
-            body.put("error", "Email déjà utilisé");
-        } else if (message != null && message.contains("utilisateur_role_check")) {
-            body.put("error", "Rôle invalide. Valeurs acceptées : ADMIN, PROFESSEUR, ETUDIANT");
-        } else {
-            body.put("error", "Données invalides ou contrainte violée");
+        String errorDetails = "Données invalides ou contrainte violée";
+        
+        if (message != null) {
+            if (message.contains("utilisateur_email_key")) errorDetails = "Email déjà utilisé";
+            else if (message.contains("utilisateur_role_check")) errorDetails = "Rôle invalide";
         }
-        return ResponseEntity.badRequest().body(body);
+
+        return ResponseEntity.badRequest().body(Map.of(
+                "status", HttpStatus.BAD_REQUEST.value(),
+                "error", errorDetails
+        ));
     }
 }
